# task-manager

./: .env.example  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/auth/: jwt.rs  router.rs
crates/api/src/task/: handlers.rs  router.rs  services.rs
crates/api/src/user/: handlers.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/event/: models.rs  services.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
migrations/: 20260418085130_create_user.sql  20260419191954_create_tasks.sql  20260421194559_create_events.sql
src/: app.rs  auth.rs  common.rs  db.rs  errors.rs  main.rs  meddelware.rs  middlewares.rs  task.rs  user.rs
src/auth/: handlers.rs  jwt.rs  models.rs  router.rs  services.rs
src/task/: handlers.rs  models.rs  router.rs  services.rs
src/user/: handlers.rs  models.rs  router.rs  services.rs
