[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
common-core = { path = "../core" }
anyhow = "1.0.102"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy = "0.15.7"
#anyhow = "1.0.102"
#serde = { version = "1.0.228", features = ["derive"] }
#sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
#tokio = { version = "1.52.1", features = ["full"] }
#uuid = { version = "1.23.1", features = ["v4", "serde"] }
